fixed button active state on tablet and mobile

--- a/src/theme/styles/global.scss
+++ b/src/theme/styles/global.scss
@@ -96,5 +96,12 @@ body:has(.disable-body-scroll) {
 	text-align: start;
 }
 
+@media (max-width: 1024px) {
+	.amplify-button--primary:hover {
+		background-color: var(--primary-color) !important;
+	}
 
-
+	.amplify-button--primary:active {
+		background-color: var(--primary-contrast-color) !important;
+	}
+}
